--- a/input.css
+++ b/input.css
@@ -217,8 +217,11 @@ nav{
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
-    
-    
+
+}
+
+.pera{
+    display: none;
 }
 
 .Commercial{
